src/test/ui/nll/reference-carried-through-struct-field.ast.stderr
error[E0506]: cannot assign to `x` because it is borrowed
  --> $DIR/reference-carried-through-struct-field.rs:11:5
   |
LL |     let wrapper = Wrap { w: &mut x };
   |                                  - borrow of `x` occurs here
LL |     x += 1;
   |     ^^^^^^ assignment to borrowed `x` occurs here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
